# shopping_cart

./: DESIGN.md  Justfile  README.md  requirements.txt
host/: cart.py  demo.py  host.py  max_total.wasm  restricted_categories.wasm  test_cart.py
host/max_total/: intrinsics.py  root.core0.wasm
host/restricted_categories/: __init__.py  root.core0.wasm
plugins/max_total/: Cargo.toml
plugins/max_total/src/: bindings.rs  lib.rs
plugins/max_total/wit/: world.wit
plugins/restricted_categories/: Cargo.toml
plugins/restricted_categories/src/: bindings.rs  lib.rs
plugins/restricted_categories/wit/: world.wit
plugins/shared/src/: lib.rs
wit/: types.wit
