[package]
name = "restricted_categories"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
shared = { path = "../shared" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:restricted-categories"

[package.metadata.component.dependencies]
